# docs/swagger.yaml
@@ -24,7 +24,7 @@ definitions:
         example: 50
         type: integer
     type: object
-  internal_features_tasks_transport_http.CreateTaskRequest:
+  internal_features_tasks_adapters_in_transport_http.CreateTaskRequest:
     properties:
       author_user_id:
         example: 5
@@ -43,7 +43,7 @@ definitions:
     - author_user_id
     - title
     type: object
-  internal_features_tasks_transport_http.CreateTaskResponse:
+  internal_features_tasks_adapters_in_transport_http.CreateTaskResponse:
     properties:
       author_user_id:
         example: 5
@@ -70,7 +70,7 @@ definitions:
         example: 3
         type: integer
     type: object
-  internal_features_tasks_transport_http.GetTaskResponse:
+  internal_features_tasks_adapters_in_transport_http.GetTaskResponse:
     properties:
       author_user_id:
         example: 5
@@ -97,7 +97,7 @@ definitions:
         example: 3
         type: integer
     type: object
-  internal_features_tasks_transport_http.PatchTaskRequest:
+  internal_features_tasks_adapters_in_transport_http.PatchTaskRequest:
     properties:
       completed:
         type: boolean
@@ -108,7 +108,7 @@ definitions:
         example: Погулять с собакой
         type: string
     type: object
-  internal_features_tasks_transport_http.PatchTaskResponse:
+  internal_features_tasks_adapters_in_transport_http.PatchTaskResponse:
     properties:
       author_user_id:
         example: 5
@@ -135,7 +135,7 @@ definitions:
         example: 3
         type: integer
     type: object
-  internal_features_tasks_transport_http.TaskDTOResponse:
+  internal_features_tasks_adapters_in_transport_http.TaskDTOResponse:
     properties:
       author_user_id:
         example: 5
@@ -313,7 +313,7 @@ paths:
           description: Успешное получение списка задач
           schema:
             items:
-              $ref: '#/definitions/internal_features_tasks_transport_http.TaskDTOResponse'
+              $ref: '#/definitions/internal_features_tasks_adapters_in_transport_http.TaskDTOResponse'
             type: array
         "400":
           description: Bad request
@@ -336,14 +336,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_features_tasks_transport_http.CreateTaskRequest'
+          $ref: '#/definitions/internal_features_tasks_adapters_in_transport_http.CreateTaskRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Успешно созданная задача
           schema:
-            $ref: '#/definitions/internal_features_tasks_transport_http.CreateTaskResponse'
+            $ref: '#/definitions/internal_features_tasks_adapters_in_transport_http.CreateTaskResponse'
         "400":
           description: Bad request
           schema:
@@ -400,7 +400,7 @@ paths:
         "200":
           description: Успешное получение задачи
           schema:
-            $ref: '#/definitions/internal_features_tasks_transport_http.GetTaskResponse'
+            $ref: '#/definitions/internal_features_tasks_adapters_in_transport_http.GetTaskResponse'
         "400":
           description: Bad request
           schema:
@@ -437,14 +437,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_features_tasks_transport_http.PatchTaskRequest'
+          $ref: '#/definitions/internal_features_tasks_adapters_in_transport_http.PatchTaskRequest'
       produces:
       - application/json
       responses:
         "200":
           description: Успешно измененная задача
           schema:
-            $ref: '#/definitions/internal_features_tasks_transport_http.PatchTaskResponse'
+            $ref: '#/definitions/internal_features_tasks_adapters_in_transport_http.PatchTaskResponse'
         "400":
           description: Bad request
           schema:
